[gd_scene load_steps=11 format=3 uid="uid://ca6tvrxxsvk02"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_bdu3u"]
[ext_resource type="PackedScene" uid="uid://spvon7oskija" path="res://scenes/player.tscn" id="1_jm2y8"]
[ext_resource type="PackedScene" uid="uid://b8uw1tqvekdhu" path="res://scenes/ball.tscn" id="3_i8ia0"]
[ext_resource type="PackedScene" uid="uid://c6747rmads7nb" path="res://scenes/UI.tscn" id="4_xw2bl"]

[sub_resource type="Gradient" id="Gradient_ml3nq"]
colors = PackedColorArray(0.114194, 0.183862, 0.411661, 0.235294, 0, 0, 0, 0.329412)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qqmix"]
gradient = SubResource("Gradient_ml3nq")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1lhri"]
size = Vector2(14, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xudry"]
size = Vector2(12.8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lepwk"]
size = Vector2(10.6667, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c07i3"]
size = Vector2(40, 720)

[node name="Main" type="Node2D"]
script = ExtResource("1_bdu3u")
player_scene = ExtResource("1_jm2y8")
ball_scene = ExtResource("3_i8ia0")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = SubResource("GradientTexture1D_qqmix")

[node name="SpeedCheck" type="Area2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="SpeedCheck"]
offset_left = 633.0
offset_right = 647.0
offset_bottom = 720.0
color = Color(0.151276, 0.151276, 0.151276, 0.415686)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpeedCheck"]
position = Vector2(640, 360)
shape = SubResource("RectangleShape2D_1lhri")

[node name="Wall" type="StaticBody2D" parent="."]

[node name="WallCollisionTop" type="CollisionShape2D" parent="Wall"]
position = Vector2(640, -10)
scale = Vector2(100, 1)
shape = SubResource("RectangleShape2D_xudry")

[node name="WallCollisionBottom" type="CollisionShape2D" parent="Wall"]
position = Vector2(640, 740)
scale = Vector2(120, 1)
shape = SubResource("RectangleShape2D_lepwk")

[node name="LeftGoalZone" type="Area2D" parent="."]

[node name="LeftZone" type="CollisionShape2D" parent="LeftGoalZone"]
position = Vector2(-20, 360)
shape = SubResource("RectangleShape2D_c07i3")

[node name="RightGoalZone" type="Area2D" parent="."]

[node name="RightZone" type="CollisionShape2D" parent="RightGoalZone"]
position = Vector2(1300, 360)
shape = SubResource("RectangleShape2D_c07i3")

[node name="UI" parent="." instance=ExtResource("4_xw2bl")]
offset_left = 640.0
offset_top = 360.0
offset_right = 640.0
offset_bottom = 360.0

[connection signal="body_entered" from="SpeedCheck" to="." method="_on_speed_check_body_entered"]
[connection signal="body_entered" from="LeftGoalZone" to="." method="_on_left_goal_zone_body_entered"]
[connection signal="body_entered" from="RightGoalZone" to="." method="_on_right_goal_zone_body_entered"]
[connection signal="countdown_finished" from="UI" to="." method="_on_ui_countdown_finished"]
[connection signal="start_button_pressed" from="UI" to="." method="_on_ui_start_button_pressed"]
